--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
         <!-- Centered image (remains centered on every viewport width) -->
         <div class="centered-image">
-          <img src="https://media.discordapp.net/attachments/1393714797635174490/1406669213086646452/IMG_2540.JPG?ex=691f3b4b&is=691de9cb&hm=a8ea9ef0392f0f940430e17f0b6dbcdfdf3f70a7b603a1226452e47a786111b6&=&format=webp&width=1240&height=826" alt="Clematis Kakio Flower">
+          <img src="https://cdn.discordapp.com/attachments/1393714797635174490/1406669213086646452/IMG_2540.JPG?ex=696fa6cb&is=696e554b&hm=c1bae999e46c216c06076031dbc7f04098f61b29e078c6b95b77b89486890ee6&" alt="Clematis Kakio Flower">
         </div>
         
         <h2>Why I Love Photography</h2>
@@ -56,9 +56,9 @@
         </ol>
         
         <div class="gallery">
-          <img src="https://media.discordapp.net/attachments/1393714797635174490/1406669166982987776/IMG_2534.JPG?ex=691f3b40&is=691de9c0&hm=766c2125afb74a36af9aaa30f4a854c42bc1f820197a49b6a366b16dfdd0880f&=&format=webp&width=1240&height=826" alt="Hydrangea Macrophylla">
-          <img src="https://media.discordapp.net/attachments/1393714797635174490/1406669265612046367/IMG_2537.JPG?ex=691f3b57&is=691de9d7&hm=a69b3ccac0fe48f4e0af7bd956a650741977eafdfb4046b9f8e5009b525ee4eb&=&format=webp&width=1240&height=826" alt="Dahlia Flower">
-          <img src="https://media.discordapp.net/attachments/1393714797635174490/1406669460223557704/IMG_2539.JPG?ex=691f3b85&is=691dea05&hm=53be1ea9913558f8a5a1b8705cb9791d03f5c3dc4c60b711168217b44ef3efe9&=&format=webp&width=1240&height=826" alt="Mophead Hydrangea">
+          <img src="https://cdn.discordapp.com/attachments/1393714797635174490/1406669460223557704/IMG_2539.JPG?ex=696fa705&is=696e5585&hm=8c49aab586cf3ddcaca4f733d71e12a5ee39d98814fc30ce993a7be7603cb73d&" alt="Hydrangea Macrophylla">
+          <img src="https://cdn.discordapp.com/attachments/1393714797635174490/1406669265612046367/IMG_2537.JPG?ex=696fa6d7&is=696e5557&hm=32f6762c2d715be558015025314f8f90761fdeb2b7dd32787f7a64844d440c82&" alt="Dahlia Flower">
+          <img src="https://cdn.discordapp.com/attachments/1393714797635174490/1406669460223557704/IMG_2539.JPG?ex=696fa705&is=696e5585&hm=8c49aab586cf3ddcaca4f733d71e12a5ee39d98814fc30ce993a7be7603cb73d&" alt="Mophead Hydrangea">
         </div>
       <p class="photographer-link">
   Check out my favourite photographer: <a href="https://www.anseladams.com">Ansel Adams</a>
