Replace external image links with local images

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
         <!-- Centered image (remains centered on every viewport width) -->
         <div class="centered-image">
-          <img src="https://cdn.discordapp.com/attachments/1393714797635174490/1406669213086646452/IMG_2540.JPG?ex=696fa6cb&is=696e554b&hm=c1bae999e46c216c06076031dbc7f04098f61b29e078c6b95b77b89486890ee6&" alt="Clematis Kakio Flower">
+          <img src="images/clematis-kakio-flower.jpg" alt="Clematis Kakio Flower">
         </div>
         
         <h2>Why I Love Photography</h2>
@@ -56,9 +56,9 @@
         </ol>
         
         <div class="gallery">
-          <img src="https://cdn.discordapp.com/attachments/1393714797635174490/1406669460223557704/IMG_2539.JPG?ex=696fa705&is=696e5585&hm=8c49aab586cf3ddcaca4f733d71e12a5ee39d98814fc30ce993a7be7603cb73d&" alt="Hydrangea Macrophylla">
-          <img src="https://cdn.discordapp.com/attachments/1393714797635174490/1406669265612046367/IMG_2537.JPG?ex=696fa6d7&is=696e5557&hm=32f6762c2d715be558015025314f8f90761fdeb2b7dd32787f7a64844d440c82&" alt="Dahlia Flower">
-          <img src="https://cdn.discordapp.com/attachments/1393714797635174490/1406669460223557704/IMG_2539.JPG?ex=696fa705&is=696e5585&hm=8c49aab586cf3ddcaca4f733d71e12a5ee39d98814fc30ce993a7be7603cb73d&" alt="Mophead Hydrangea">
+          <img src="images/hydrangea-macrophylla.jpg" alt="Hydrangea Macrophylla">
+          <img src="images/dahlia-flower.jpg" alt="Dahlia Flower">
+          <img src="images/mophead-hydrangea.jpg" alt="Mophead Hydrangea">
         </div>
       <p class="photographer-link">
   Check out my favourite photographer: <a href="https://www.anseladams.com">Ansel Adams</a>
