Fix typos in photography description

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <h1 id="main title">Photography - My Greatest Passion</h1>
         
-        <p>Photography is not just a hobby for me. It has become a way of seeing the world. Ever since I got my iPhone 15 Pro Max and Canon EOS R10 mirrorless camera with the RF-S 18-150mm f/3.5-6.3 IS STM lens in 2024, I've been chasing emotions and moments through a lens. Whether it's golden hour landscapes, street scenes full of life, flowers in my garden, or intimate portraits of friendly and family, every click teaches me about storytelling, patience and composition.
+        <p>Photography is not just a hobby for me. It has become a way of seeing the world. Ever since I got my iPhone 15 Pro Max and Canon EOS R10 mirrorless camera with the RF-S 18-150mm f/3.5-6.3 IS STM lens in 2024, I've been chasing emotions and moments through a lens. Whether it's golden hour landscapes, street scenes full of life, flowers in my garden, or intimate portraits of friends and family, every click teaches me about storytelling, patience and composition.
         </p>
         
         <p>
@@ -38,7 +38,7 @@
         <ul>
           <li> Lets me be creative every single day</li>
           <li> I can share emotions without saying a word</li>
-          <li> It freezes a plit-second of life forever</li>
+          <li> It freezes a split-second of life forever</li>
           <li> Seeing the world differently</li>
           <li> Stress relief and Mindfulness</li>
           <li> Leaving a legacy</li>
