Update image file extensions to uppercase

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
 
   <div class="centered-image">
-    <img src="images/clematis-kakio-flower.jpg" alt="Clematis Kakio Flower">
+    <img src="images/clematis-kakio-flower.JPG" alt="Clematis Kakio Flower">
   </div>
 
   <h2>Why I Love Photography</h2>
@@ -44,9 +44,9 @@
   </ol>
 
   <div class="gallery">
-    <img src="images/hydrangea-macrophylla.jpg" alt="Hydrangea Macrophylla">
-    <img src="images/dahlia-flower.jpg" alt="Dahlia Flower">
-    <img src="images/mophead-hydrangea.jpg" alt="Mophead Hydrangea">
+    <img src="images/hydrangea-macrophylla.JPG" alt="Hydrangea Macrophylla">
+    <img src="images/dahlia-flower.JPG" alt="Dahlia Flower">
+    <img src="images/mophead-hydrangea.JPG" alt="Mophead Hydrangea">
   </div>
 
   <p class="photographer-link">
